# PHYTIUM_PI

./: .gitignore
src/phytium_car_cpp/: CMakeLists.txt  package.xml
src/phytium_car_cpp/launch/: cmd_vel_mux_cpp.launch.py  d6_lidar_cpp.launch.py  safety_guard_cpp.launch.py  uart_bridge_cpp.launch.py
src/phytium_car_cpp/src/: cmd_vel_mux_cpp.cpp  cmd_vel_mux_cpp.cpp.bak_debug_fix_20260519_230828  cmd_vel_mux_cpp.cpp.bak_dual_qos_20260519_233213  d6_lidar_cpp.cpp  d6_lidar_cpp.cpp.bak_scan_stamp_offset_20260531_003210  safety_guard_cpp.cpp  uart_bridge_cpp.cpp
src/phytium_navigation/: package.xml  setup.cfg  setup.py  setup.py.bak_fix_launch_glob_20260530_231352
src/phytium_navigation/config/: ekf.yaml  nav2_params.yaml  nav2_params_low_cpu.STABLE_20260521.yaml  nav2_params_low_cpu.yaml  nav2_params_low_cpu.yaml.bak_20260520_231916  nav2_params_low_cpu.yaml.bak_dwb_low_speed_20260521_221523  nav2_params_low_cpu.yaml.bak_fix_yaml_20260521_222200  nav2_params_low_cpu.yaml.bak_followpath_insert_20260521_222307  nav2_params_low_cpu.yaml.bak_tf_tol_20260521_001553  nav2_params_safe_patch.yaml  simple_navigate.xml
src/phytium_navigation/launch/: amcl_only.launch.py  bringup_nav.launch.py  bringup_slam.launch.py  nav2.launch.py  nav2.launch.py.bak_lifecycle_auto_20260521_004703  nav2.launch.py.bak_scan_amcl_20260521_014052  nav2.launch.py.bak_scan_amcl_20260521_014352  nav_direct_cold.launch.launch.py.bak_delay_nav_stack_20260531_020408  nav_direct_cold.launch.py  nav_only.launch.py
src/phytium_navigation/maps/: my_map.pgm  my_map.yaml  my_map.yaml.bak_fix_image_path_20260531_010410
src/phytium_navigation/scripts/: scan_amcl_delay.py
src/phytium_vision/: README.md  package.xml  setup.cfg  setup.py
src/phytium_vision/config/: vision_params.yaml
src/phytium_vision/launch/: bringup_vision.launch.py  cmd_vel_mux.launch.py  cmd_vel_mux.launch.py.bak_cpp_mux_20260519_230123  safety_guard.launch.py  vision_client.launch.launch.py.bak_realsense257_20260531  vision_client.launch.py  vision_client.launch.py.bak_640x480_ok_20260531_064344
src/phytium_vision/phytium_vision/: cmd_vel_mux.py  protocol.py  rgb_sender.py  rgb_sender.py.bak_sensor_qos_20260531_052956  safety_guard.py  target_depth_follower.py  target_depth_follower.py.bak_sensor_qos_20260531_053002
src/phytium_vision/scripts_rtx3050/: yolo_bbox_server.py
src/phytium_web/: README.md  package.xml  setup.cfg  setup.py
src/phytium_web/config/: web_params.yaml
src/phytium_web/launch/: bringup_web.launch.py
src/phytium_web/phytium_web/: app.py  app.py.bak_api_radar_20260520_004716  app.py.bak_before_clean_restore_20260520_224127  app.py.bak_before_restore_mode_20260520_223615  app.py.bak_before_web_control_guard  app.py.bak_dynamic_follow_target_20260531_071519  app.py.bak_initial_pose_timeout_20260531_031222  app.py.bak_mode_fast_20260520_222853  app.py.bak_nav_cancel_fix_20260531_053343  app.py.bak_nav_goal_timeout_20260531_032041  app.py.bak_replace_nav2_real_20260520_213240  app.py.bak_safe_nav2_v2_20260520_214141  app.py.bak_safe_nav2_v2_20260520_223615  remote_monitor.py  remote_vision_controller.py  remote_vision_controller.py.bak_dynamic_follow_target_20260531_071519  ros_bridge.py  ros_bridge.py.bak_base_footprint_20260521_211239  ros_bridge.py.bak_hold_timeout_fast_20260520_164109  state_cache.py  state_cache.py.bak_get_key_20260520_004232  system_monitor.py  task_manager.py  task_manager.py.bak_dynamic_follow_target_20260531_071519  task_manager.py.bak_manual_cleanup_fix_20260531_053343  task_manager.py.bak_nav_direct_20260531_014829  task_manager.py.bak_nav_ready_20260521_211231
src/phytium_web/phytium_web/static/: app.js  app.js.bak_api_radar_20260520_004730  app.js.bak_before_hold_stop_fix  app.js.bak_follow_target_20260531_070434  app.js.bak_mapping_control_delay_20260520_163829  app.js.bak_nav2_click_coord_simple_20260520_225120  app.js.bak_nav2_fetch_debug_20260520_225629  (+2 more)
src/phytium_web/tools_rtx3050/: yolo_bbox_server_with_stats.py
(+68 files in other folders)
