<?xml version="1.0"?>
<package format="3">
  <name>phytium_car_cpp</name>
  <version>0.1.0</version>
  <description>High-performance C++ ROS2 nodes for Phytium smart car.</description>
  <maintainer email="fengy5487@gmail.com">fengy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
