<?xml version="1.0"?>
<package format="3">
  <name>phytium_vision</name>
  <version>2.0.0</version>
  <description>Clean Flyt-Pi vision pipeline: RGB cloud inference + local depth following</description>
  <maintainer email="user@phytium.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
