<?xml version="1.0"?><package format="3"><name>phytium_web</name><version>2.0.0</version><description>Final Phytium ROS2 robot web dashboard</description><maintainer email="user@phytium.com">user</maintainer><license>MIT</license><buildtool_depend>ament_python</buildtool_depend><depend>rclpy</depend><depend>geometry_msgs</depend><depend>nav_msgs</depend><depend>std_msgs</depend><depend>sensor_msgs</depend><exec_depend>flask</exec_depend><export><build_type>ament_python</build_type></export></package>